examples/test/testpolicy5884.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5884
  namespace: namespace279
spec:
  podSelector:
    matchLabels:
      key2: value48
      key45: value20
      key30: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value39
          key34: value29
          key30: value16
      podSelector:
        matchLabels:
          key31: value38
